# veriqa

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
examples/: mutation_demo.py
src/veriqa/: __init__.py  exceptions.py
src/veriqa/assertions/: __init__.py  _convert.py  distribution.py  properties.py  state.py  unitary.py
src/veriqa/backends/: __init__.py  base.py  qiskit_aer.py
src/veriqa/core/: __init__.py  config.py  result.py
src/veriqa/stats/: __init__.py  distances.py  tests.py
tests/: test_assertions.py
