[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "veriqa"
version = "0.1.0"
description = "Catch silently-wrong quantum circuits: assertions, statistical checks, and regression tests for quantum programs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Shubham Tripathi" }]
keywords = ["quantum", "testing", "qiskit", "qa", "verification", "regression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "qiskit>=1.0",
    "qiskit-aer>=0.13",
    "scipy>=1.10",
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/CHANGE_ME/veriqa"
Issues = "https://github.com/CHANGE_ME/veriqa/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
